--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,12 @@ ul {
 
 .header {
 	border-bottom: 1px solid #E7E9FC;
+}
+
+.header {
+	background: #FFFFFF;
+	border-bottom: 1px solid #E7E9FC;
+	box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 
 }
 
@@ -193,14 +199,18 @@ ul {
 /*Hero image*/
 .hero {
 	background: var(--grey);
-	padding: 188px;
+	padding: 188px 0;
+	max-width: 1440px;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
 	background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 			rgba(46, 47, 66, 0.7)),
-		url("../images/people-office.png");
+		url("../images/people-office\ 1.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: center;
+	background-size: cover;
 }
 
 
@@ -265,7 +275,7 @@ ul {
 	line-height: 1.2;
 	letter-spacing: 0.02em;
 	color: var(--grey);
-	padding-bottom: 8px;
+	margin-bottom: 8px;
 }
 
 .advan-text {
@@ -282,12 +292,16 @@ ul {
 	background-color: var(--cloud);
 	width: 264px;
 	height: 112px;
+	margin-bottom: 8px;
+	border-radius: 4px;
+	align-items: center;
+	justify-content: center;
 }
 
 .advan_icon {
 	width: 64px;
 	height: 64px;
-	margin: auto;
+
 }
 
 /*---------------------Perevagy-ДЗ-4-----------------*/
@@ -374,6 +388,7 @@ ul {
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: var(--purple);
+	margin-bottom: 8px;
 }
 
 /*-----------------Section Team Link ДЗ-4-----------------------------*/
@@ -381,8 +396,6 @@ ul {
 	display: flex;
 	justify-content: center;
 	gap: 24px;
-	margin-bottom: 32px;
-	cursor: pointer;
 }
 
 .team_social {
@@ -394,8 +407,8 @@ ul {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 40px;
-	height: 40px;
+	width: 100%;
+	height: 100%;
 	border-radius: 50%;
 	background-color: var(--syniy);
 }
@@ -410,7 +423,6 @@ ul {
 	width: 16px;
 	height: 16px;
 }
-
 
 .team_link:hover,
 .team_link:focus {
@@ -428,38 +440,43 @@ ul {
 
 /*-------------Section Customers--ДЗ-4------------------------*/
 
+.sections_customers {
+	padding-top: 130px;
+	padding-bottom: 103px;
+}
+
 .social_media_item {
 	align-items: center;
 }
 
 .clients_title {
+	margin-top: 0;
+	margin-bottom: 72px;
 	font-weight: 700;
+	font-size: 36px;
 	line-height: 1.11;
 	text-align: center;
 	letter-spacing: 0.02em;
-	text-transform: capitalize;
 	color: var(--grey);
-	box-sizing: border-box;
-	margin-bottom: 72px;
 }
 
 .clients_list {
 	display: flex;
 	justify-content: center;
 	gap: 24px;
-	padding-bottom: 120px;
 }
 
 .clients_item {
 	width: 168px;
 	height: 88px;
-	border-radius: 4px;
+
 }
 
 .clients_link {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border-radius: 4px;
 	width: 100%;
 	height: 100%;
 	border: 1px solid var(--light-slate);
@@ -470,8 +487,8 @@ ul {
 .clients_link:focus {
 	color: var(--grey-syniy);
 	fill: var(--grey-syniy);
-	border: 1px solid var(--grey-syniy);
-	border-radius: 4px;
+	border-color: var(--grey-syniy);
+
 }
 
 .clients_icon {
@@ -533,9 +550,7 @@ ul {
 }
 
 .footer_right {
-	width: 208px;
-	height: 80px;
-	padding-left: 120px;
+	margin-left: 120px;
 }
 
 .footer_social_list {
@@ -565,8 +580,8 @@ ul {
 }
 
 .footer_link_sign {
-	width: 16px;
-	height: 16px;
+	width: 24px;
+	height: 24px;
 }
 
 /*--------------------------/Footer_right-ДЗ-4------------------------*/
@@ -609,6 +624,7 @@ ul {
 	justify-content: center;
 	gap: 24px;
 	margin-bottom: 72px;
+
 }
 
 .main_buttons_btn {
@@ -625,6 +641,11 @@ ul {
 	padding: 12px 24px 12px 24px;
 	color: var(--syniy);
 	border: 1px solid #E7E9FC;
+	border-radius: 4px;
+}
+
+.main_buttons_btn {
+	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 	border-radius: 4px;
 }
 
@@ -646,6 +667,13 @@ ul {
 .section_row_item {
 	/*  Set the width of the elements  */
 	flex-basis: calc((100% - 48px) / 3);
+
+}
+
+.row_item {
+	display: block;
+	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+	border-radius: 4px;
 }
 
 .img {
@@ -693,9 +721,7 @@ footer {
 	display: flex;
 }
 
-.footer_right {
-	flex: 2;
-}
+
 
 
 
