--- a/css/styles.css
+++ b/css/styles.css
@@ -545,7 +545,6 @@ ul {
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color: #FFFFFF;
-	height: 16px;
 	margin-bottom: 16px;
 }
 
@@ -575,7 +574,8 @@ ul {
 	background-color: #434455;
 }
 
-.footer_link_back:hover {
+.footer_link_back:hover,
+.footer_link_back:focus {
 	background-color: #31D0AA;
 }
 
@@ -629,7 +629,6 @@ ul {
 
 .main_buttons_btn {
 	cursor: pointer;
-	background-color: var(--cloud);
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.5;
@@ -644,16 +643,13 @@ ul {
 	border-radius: 4px;
 }
 
-.main_buttons_btn {
-	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-	border-radius: 4px;
-}
-
 .main_buttons_btn:hover,
 .main_buttons_btn:focus {
 	background: var(--grey-syniy);
 	color: var(--main-light-color);
 	border-color: transparent;
+	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+	border-radius: 4px;
 }
 
 .section_row_works {
@@ -670,7 +666,8 @@ ul {
 
 }
 
-.row_item {
+.row_item:hover,
+.row_item:focus {
 	display: block;
 	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 	border-radius: 4px;
